# Fortune_MIRE

./: .env.example  .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: AI_INTERPRETATION_WORKFLOW.md  COMPOSITE_RULES.md  FORTUNE_METHODS.md  ONE_CLICK_READING_DESIGN.md  OPERATING_GUIDE.md  OPERATIONS.md
scripts/: run_sample_job.py  serve_web.py
src/fortune/: __init__.py  config.py  logging_utils.py  runner.py  runtime.py  validation.py
tests/: test_runtime.py  test_validation.py
web/: app.js  index.html  styles.css
